--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-tactile
+title: Caddell Chess Computer
+description: Play chess against modern chess engines without the need for a computer, smartphone, or the internet.
